--- a/index.html
+++ b/index.html
@@ -3,5 +3,13 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+
+
+
+<script src="calculator.js"></script>
+
+<button onclick="calculateReward()">Click me</button> 
+
 </body>
 </html>
